Fixes some sizing and alignment issues on Firefox. Also tweaks index JS to try to fix timing issue.

--- a/2018/style.css
+++ b/2018/style.css
@@ -3,6 +3,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   text-align: justify;
+  font-family: Arial, sans-serif;
 }
 
 body.wide {
@@ -39,10 +40,12 @@ span.input-block {
   text-align: left;
   vertical-align: top;
 }
-span.padded-label {
-}
 *.money, *.number {
   text-align: right;
+}
+input {
+  font-size: 13.3333px;
+  box-sizing: border-box;
 }
 input.ng-invalid.ng-touched {
   background-color: #FF999E;
